--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,14 @@ body {
 
 .card {
   background: #141416;
-  width: 350px;
+  max-width: 350px;
   padding: 20px;
   border-radius: 20px;
   box-shadow: 0 0 10px #222;
   color: #fff;
   text-align: center;
   border: 1px solid #2e2e32;
+  position: relative;
 }
 
 /* Header title */
@@ -48,10 +49,13 @@ body {
 }
 
 .badge {
-  width: 40px;
-  position: absolute;
-  bottom: 0;
-  right: 80px;
+  width: 30px;
+  height: 30px;
+  position: relative;
+  bottom: 20px;
+  right: 36px;
+  border-radius:50%;
+  border: 1px solid #e0a46f;
 }
 
 /* Name & handle */
@@ -119,12 +123,21 @@ body {
 .icons img {
   width: 28px;
   margin: 0 5px;
-  filter: grayscale(100%);
+  
   transition: 0.2s;
 }
 
-.icons img:hover {
-  filter: none;
+.linkedin img {
+  width: 18px;
+  margin: 0 5px;
+  vertical-align: middle;
+  
+  transition: 0.2s;
+}
+
+.icons img:hover,
+.linkedin img:hover {
+  filter: grayscale(100%);
 }
 
 /* Tags */
@@ -142,4 +155,26 @@ body {
   border-radius: 20px;
   font-size: 13px;
   color: #ddd;
+}
+
+@keyframes rotateWeb {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
+.web-lines {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none; /* so it doesn't block clicks */
+      color: #706e6e;
+      animation: rotateWeb 120s linear infinite;
+      transform-origin: center center;
+    }
+.card > *:not(.web-lines) {
+  position: relative;
+  z-index: 1;
 }
